# koto_midi

./: Cargo.toml  README.md  justfile
koto-midi/: Cargo.toml
koto-midi/src/: lib.rs  message.rs
koto-midi/src/message/: channel_voice.rs  system_common.rs  system_realtime.rs
koto/tests/: api.koto  midi.koto
midi/: Cargo.toml
midi/src/: lib.rs  message.rs
midi/src/message/: channel_mode.rs  channel_voice.rs  system_common.rs
test-runner/: Cargo.toml
test-runner/tests/: test_runner.rs
test_runner/: Cargo.toml
test_runner/tests/: test_runner.rs
