[package]
name = "koto-midi"
version = "0.1.0"
authors = ["alisomay <alisomay@runbox.com>"]
edition = "2021"
license = "MIT"
description = "A Koto library for working with midi data"
homepage = "https://github.com/alisomay/koto_midi"
repository = "https://github.com/alisomay/koto_midi"
keywords = ["scripting", "module", "koto"]

[dependencies]
koto = { workspace = true }
